Ajuste de titulo y descripcion en html

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,15 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Avoid the cubes!" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Repeat the sequence" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preload" href="%PUBLIC_URL%/fonts.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="preload" href="%PUBLIC_URL%/fonts/commando.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="%PUBLIC_URL%/fonts/Road_Rage.otf" as="font" type="font/otf" crossorigin>
+  <link rel="preload" href="%PUBLIC_URL%/fonts/Retro_Computer.otf" as="font" type="font/otf" crossorigin>
+  <link rel="preload" href="%PUBLIC_URL%/fonts/Retronoid.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="prefetch" as="image" href="%PUBLIC_URL%/cuberun-logo.png">
-  <title>CubeRun</title>
+  <title>Simon Three.Js</title>
 </head>
 
 <body>
